--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
 <html>
     <body>
         <h1>Hello git</h1>
+        <article>
+            Git is version control system.
+        </article>
     </body>
 </html>
